fix mobile alignment issues

--- a/styles/css.css
+++ b/styles/css.css
@@ -373,6 +373,9 @@ body {
         margin: 0;
         border-radius: 0px;
         height: 25%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     [class^="label_"]:not(:last-child) {
